--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-dependencies = ["pyyaml", "click"]
+dependencies = ["pyyaml", "click", "jsonschema"]
 
 [project.scripts]
 vpa = "cli.main:cli"
