Add TEST-SUP-1 rule — completes ENTRY-LONG-1 setup end-to-end
Register and implement TEST-SUP-1 (test of supply): low-volume bar
with narrow/normal spread signals selling pressure removed. This is
the missing trigger for ENTRY-LONG-1 (TEST-SUP-1 -> VAL-1 sequence).

Requires CTX-1 gate. Direction-agnostic per Couling: the test is
about absence of sellers, not bar direction. Pipeline enriches all
signal evidence with bar_low/bar_high for stop placement.

9 new tests (7 detector + 2 orchestrator). All 183 tests pass.
Traceability: 5 OK, 1 PARTIAL, 20 MISSING, 0 EXTRA.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -66,6 +66,25 @@ rules:
     tests_required:
       - "FXT-ANOM-1-basic"
 
+  - id: "TEST-SUP-1"
+    type: "atomic_rule"
+    class: "TEST"
+    direction_bias: "BULLISH"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: ["CTX-1"]
+    parameters_ref: "shared_parameters"
+    conditions:
+      all:
+        - "volState == LOW"
+        - "spreadState in {NARROW, NORMAL}"
+    emits:
+      signal_event: "SUPPLY_REMOVED_TEST_PASS"
+    notes: "Low-volume bar with narrow/normal spread near congestion. Selling pressure removed."
+    tests_required:
+      - "FXT-TEST-SUP-1-basic"
+
 setups:
   - id: "ENTRY-LONG-1"
     type: "setup"
