Add ANOM-2 rule — "big effort, little result" (absorption/weakness)
Implement the bearish counterpart to ANOM-1: high/ultra-high volume with
narrow/normal spread signals insiders absorbing or selling at a level.
Direction-agnostic (fires on both up and down bars).

- Register ANOM-2 in VPA_RULE_REGISTRY.yaml with conditions and gate
- Implement detect_anom_2 in rule_engine.py; add to _RULE_DETECTORS
- 9 new tests: firing conditions, rejections, evidence, mutual exclusion
  with VAL-1 (wide spread = VAL territory, not absorption)
- Update VPA_TRACEABILITY.md: 6 OK, 1 PARTIAL, 19 MISSING

All 194 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -66,6 +66,25 @@ rules:
     tests_required:
       - "FXT-ANOM-1-basic"
 
+  - id: "ANOM-2"
+    type: "atomic_rule"
+    class: "ANOMALY"
+    direction_bias: "BEARISH_OR_WAIT"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: ["CTX-1"]
+    parameters_ref: "shared_parameters"
+    conditions:
+      all:
+        - "volState in {HIGH, ULTRA_HIGH}"
+        - "spreadState in {NARROW, NORMAL}"
+    emits:
+      signal_event: "ANOMALY_WEAKNESS_OR_ABSORPTION"
+    notes: "High effort not producing expected result. Insiders selling/absorbing at this level."
+    tests_required:
+      - "FXT-ANOM-2-basic"
+
   - id: "TEST-SUP-1"
     type: "atomic_rule"
     class: "TEST"
