Add STR-1 rule — hammer candle (strength / selling absorbed)
Detect hammer pattern using config-driven wick/body/range ratio thresholds:
  lower_wick/range >= 0.60, body/range <= 0.33, upper_wick/range <= 0.10

This is a prerequisite for CONF-1 (wait-for-response) and ENTRY-LONG-2
(hammer-based long entry with stop below wick).

Config changes:
- Add candle_patterns section to vpa.default.json with hammer and
  shooting_star thresholds (shooting_star pre-wired for WEAK-1)
- Add candle_patterns to JSON schema (optional for backward compat)
- Add HammerConfig, ShootingStarConfig, CandlePatternsConfig dataclasses

Rule engine:
- Implement detect_str_1 with ratio-based detection, CTX-1 gate required
- Evidence includes computed ratios for downstream audit

Tests: 10 new (9 in TestSTR1 + 1 orchestrator), including boundary,
rejection, config-override, and zero-range edge cases.

Update VPA_TRACEABILITY.md: 7 OK, 1 PARTIAL, 18 MISSING.
All 204 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -66,6 +66,27 @@ rules:
     tests_required:
       - "FXT-ANOM-1-basic"
 
+  - id: "STR-1"
+    type: "atomic_rule"
+    class: "STRENGTH"
+    direction_bias: "BULLISH"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: ["CTX-1"]
+    parameters_ref: "candle_patterns.hammer"
+    conditions:
+      all:
+        - "lower_wick / range >= hammer.lower_wick_ratio_min"
+        - "spread / range <= hammer.body_ratio_max"
+        - "upper_wick / range <= hammer.upper_wick_ratio_max"
+        - "range > 0"
+    emits:
+      signal_event: "STRENGTH_HAMMER"
+    notes: "Hammer candle: session falls then recovers to close near open. Selling absorbed. Powerful with VPA."
+    tests_required:
+      - "FXT-STR-1-basic"
+
   - id: "ANOM-2"
     type: "atomic_rule"
     class: "ANOMALY"
