Add WEAK-1 rule — shooting star (weakness / demand exhaustion)
Detect shooting star pattern: inverse of STR-1 (hammer). Large upper
wick, small body, minimal lower wick — market pushed higher then fell
back. Config thresholds from candle_patterns.shooting_star (pre-wired
in commit 16).

Couling: in downtrends confirms weakness; after selling climax can be
a test of demand as market moves lower.

- Register WEAK-1 in VPA_RULE_REGISTRY.yaml
- Implement detect_weak_1 in rule_engine.py; add to _RULE_DETECTORS
- 10 new tests (9 in TestWEAK1 + 1 orchestrator), including mutual
  exclusion with STR-1 (hammer and shooting star cannot co-fire)
- Update VPA_TRACEABILITY.md: 8 OK, 1 PARTIAL, 17 MISSING

All 214 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -87,6 +87,27 @@ rules:
     tests_required:
       - "FXT-STR-1-basic"
 
+  - id: "WEAK-1"
+    type: "atomic_rule"
+    class: "WEAKNESS"
+    direction_bias: "BEARISH"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: ["CTX-1"]
+    parameters_ref: "candle_patterns.shooting_star"
+    conditions:
+      all:
+        - "upper_wick / range >= shooting_star.upper_wick_ratio_min"
+        - "spread / range <= shooting_star.body_ratio_max"
+        - "lower_wick / range <= shooting_star.lower_wick_ratio_max"
+        - "range > 0"
+    emits:
+      signal_event: "WEAKNESS_SHOOTING_STAR"
+    notes: "Shooting star: market pushed higher then falls back. In downtrends confirms weakness; after climax can be test of demand."
+    tests_required:
+      - "FXT-WEAK-1-basic"
+
   - id: "ANOM-2"
     type: "atomic_rule"
     class: "ANOMALY"
