Add CONF-1 rule — positive response bar (confirmation candle)
Detect "positive response" bars: UP candle with non-LOW volume and
non-NARROW spread. Intentionally broad on its own — becomes meaningful
only when the Setup Composer pairs it with a prior strength/test signal
(e.g., STR-1 -> CONF-1 = ENTRY-LONG-2 candidate).

Couling: "Is this stopping volume — perhaps, and we wait for the next
candle…"; lack of positive response is not bullish.

- Register CONF-1 in VPA_RULE_REGISTRY.yaml (no gate required)
- Implement detect_conf_1 in rule_engine.py; priority=3 (lower than
  signals it confirms); add to _RULE_DETECTORS
- 10 new tests (9 in TestCONF1 + 1 orchestrator), including co-fire
  with VAL-1 verification
- Update existing orchestrator and pipeline tests to account for
  legitimate CONF-1 co-firing on qualifying UP bars
- Update VPA_TRACEABILITY.md: 9 OK, 1 PARTIAL, 16 MISSING

All 224 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -127,6 +127,30 @@ rules:
     tests_required:
       - "FXT-ANOM-2-basic"
 
+  - id: "CONF-1"
+    type: "atomic_rule"
+    class: "CONFIRMATION"
+    direction_bias: "BULLISH"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: []
+    parameters_ref: "shared_parameters"
+    conditions:
+      all:
+        - "candle_type == UP"
+        - "volState in {AVERAGE, HIGH, ULTRA_HIGH}"
+        - "spreadState in {NORMAL, WIDE}"
+    emits:
+      signal_event: "POSITIVE_RESPONSE"
+    notes: >
+      Positive response bar: up bar with visible body and non-low volume.
+      Meaningful only when following a strength/test signal (STR-1, etc.)
+      via Setup Composer sequencing. Couling: "we wait for the next candle"
+      — lack of positive response is not bullish.
+    tests_required:
+      - "FXT-CONF-1-basic"
+
   - id: "TEST-SUP-1"
     type: "atomic_rule"
     class: "TEST"
