Add AVOID-NEWS-1 rule — long-legged doji on LOW volume (stand-aside)
Detect manipulation / stop hunting: wide two-sided range (both wicks
>= 25% of range) with tiny body (<= 25% of range) but LOW volume.
Big result with no effort = insiders "racking" price.

Couling: "we stay out, and wait for further candles."

Config changes:
- Add long_legged_doji section to vpa.default.json (body_ratio_max,
  min_wick_ratio) and JSON schema
- Add LongLeggedDojiConfig dataclass to vpa_config.py

Rule engine:
- Implement detect_avoid_news_1; priority=0 (highest — avoidance
  overrides all other signals); no context gate needed
- Evidence includes computed ratios for audit trail

Tests: 11 new (10 in TestAVOIDNEWS1 + 1 orchestrator), including
mutual exclusion checks, co-fire with TEST-SUP-1, one-sided wick
rejection.

This completes the Phase D priority list for first-version rules.
Update VPA_TRACEABILITY.md: 10 OK, 1 PARTIAL, 15 MISSING.
All 235 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -170,6 +170,30 @@ rules:
     tests_required:
       - "FXT-TEST-SUP-1-basic"
 
+  - id: "AVOID-NEWS-1"
+    type: "atomic_rule"
+    class: "AVOIDANCE"
+    direction_bias: "NEUTRAL"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: []
+    parameters_ref: "candle_patterns.long_legged_doji"
+    conditions:
+      all:
+        - "range > 0"
+        - "spread / range <= long_legged_doji.body_ratio_max"
+        - "upper_wick / range >= long_legged_doji.min_wick_ratio"
+        - "lower_wick / range >= long_legged_doji.min_wick_ratio"
+        - "volState == LOW"
+    emits:
+      signal_event: "AVOID_TRADE_WAIT"
+    notes: >
+      Long-legged doji on LOW volume = manipulation / stop hunting.
+      Couling: insiders racking price; we stay out and wait for further candles.
+    tests_required:
+      - "FXT-AVOID-NEWS-1-basic"
+
 setups:
   - id: "ENTRY-LONG-1"
     type: "setup"
