Add ENTRY-LONG-2 setup — hammer reversal (STR-1 -> CONF-1)
Second trading setup: detect hammer candle (STR-1), then wait for
positive response bar (CONF-1) within window_X bars. Stop below
hammer wick (bar_low from first signal evidence).

Couling: "Is this stopping volume — perhaps, and we wait for the
next candle…" Only act when confirmation follows.

Setup Composer:
- Refactor to data-driven _SETUP_DEFS dict (eliminates per-setup
  if/elif branches — adding setups is now one dict entry)
- AVOID-NEWS-1 (avoidance class) now also invalidates LONG candidates
- Both setups track independently and can complete on the same bar

Risk Engine:
- _compute_stop handles ENTRY-LONG-2 (same pattern as ENTRY-LONG-1:
  stop at first signal's bar_low)

Registry: ENTRY-LONG-2 added with full sequence, gates, invalidation

Tests: 9 new composer tests (complete, expire, invalidate, avoidance
invalidate, no-duplicate, both-setups-independent, both-complete)

Update VPA_TRACEABILITY.md: 11 OK, 1 PARTIAL, 14 MISSING.
All 244 tests pass.

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -216,3 +216,27 @@ setups:
       trade_intent_candidate: "ENTRY_OK_LONG"
     tests_required:
       - "FXT-ENTRY-LONG-1-seq"
+
+  - id: "ENTRY-LONG-2"
+    type: "setup"
+    direction: "LONG"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    gates_required: ["CTX-1"]
+    sequence:
+      within_bars: "${shared_parameters.setup_window_X}"
+      steps:
+        - "STR-1"
+        - "CONF-1"
+    invalidation:
+      any:
+        - "opposing_high_priority_anomaly"
+        - "AVOID-NEWS-1"
+        - "window_expired"
+    stop_placement: "below hammer wick (first signal bar_low)"
+    emits:
+      trade_intent_candidate: "ENTRY_OK_LONG"
+    notes: "Couling hammer reversal: STR-1 detected, wait for positive response (CONF-1). Stop below hammer wick."
+    tests_required:
+      - "FXT-ENTRY-LONG-2-seq"
