Add AVOID-TRAP-1 + AVOID-COUNTER-1 avoidance rules
AVOID-TRAP-1 fires when ANOM-1 is present without same-bar VAL-1,
making the trap-up risk explicitly visible in the signal chain.
AVOID-COUNTER-1 fires when dominant alignment is AGAINST, surfacing
the CTX-2 risk state for journaling and observability.

Refine setup composer invalidation to distinguish hard-block avoidance
(AVOID-NEWS-1) from soft/informational avoidance (AVOID-COUNTER-1)
so counter-trend entries get risk-engine size reduction rather than
blanket candidate invalidation.

- 16 new tests, 543 total passing

--- a/docs/vpa/VPA_RULE_REGISTRY.yaml
+++ b/docs/vpa/VPA_RULE_REGISTRY.yaml
@@ -417,6 +417,56 @@ setups:
     tests_required:
       - "FXT-ENTRY-SHORT-1-seq"
 
+  - id: "AVOID-TRAP-1"
+    type: "avoidance_rule"
+    direction: "NEUTRAL"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    conditions:
+      required:
+        - "ANOM-1 present in bar signals"
+        - "VAL-1 NOT present on same bar"
+    signal_class: "AVOIDANCE"
+    bias: "NEUTRAL"
+    priority: 0
+    gates_required: []
+    implementation:
+      function: "detect_avoid_trap_1"
+      file: "src/vpa_core/rule_engine.py"
+    notes: >
+      Couling: wide spread up on low volume = alarm bells. Without
+      volume support the move is not genuine. Avoids trap-up longs.
+      This signal also invalidates LONG setup candidates via the
+      setup composer invalidation logic.
+    tests_required:
+      - "TestAVOIDTRAP1"
+
+  - id: "AVOID-COUNTER-1"
+    type: "avoidance_rule"
+    direction: "NEUTRAL"
+    scope:
+      timeframes: ["any"]
+      markets: ["any"]
+    conditions:
+      required:
+        - "dominant_alignment == AGAINST (from CTX-2)"
+    signal_class: "AVOIDANCE"
+    bias: "NEUTRAL"
+    priority: 0
+    gates_required: []
+    implementation:
+      function: "detect_avoid_counter_1"
+      file: "src/vpa_core/rule_engine.py"
+    notes: >
+      Couling: counter-dominant trend entries carry higher risk.
+      Makes the CTX-2 AGAINST state explicitly visible in the signal
+      chain for journaling, observability, and setup composer
+      invalidation. Risk engine already applies size reduction via
+      CTX-2 REDUCE_RISK policy independently.
+    tests_required:
+      - "TestAVOIDCOUNTER1"
+
   - id: "ENTRY-LONG-2"
     type: "setup"
     direction: "LONG"
