--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,12 @@ services:
       - ./docs/config:/app/docs/config:ro
     command: ["paper", "--live"]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "vpa", "health"]
+      interval: 60s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
 
   vpa-qqq:
     build: .
@@ -39,3 +45,9 @@ services:
       - ./docs/config:/app/docs/config:ro
     command: ["paper", "--live"]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "vpa", "health"]
+      interval: 60s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
