Add structured JSON event logging and webhook alerting
StructuredEventLogger emits newline-delimited JSON to stderr for
Docker log aggregation. Events cover the full cycle lifecycle:
start, signals, trades, rejections, errors, shutdown. Optional
webhook POSTs trade-level alerts to configurable URL. Scheduler
now catches per-cycle errors and continues instead of crashing.

- AlertingConfig added to AppConfig (structured_logs, webhook_url)
- 11 new tests, 570 total passing

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -29,3 +29,7 @@ execution:
 journal:
   path: data/journal.jsonl
   echo_stdout: false
+
+alerting:
+  structured_logs: true      # JSON events to stderr (visible via docker logs)
+  webhook_url: ""            # optional: POST trade alerts to URL (Slack/Discord)
