Add kill switch + max daily loss safety limits (Commit 55)
Introduce SafetyGuard that blocks order submission when kill_switch is
enabled or daily realized losses exceed the configurable threshold.
Wired into the scheduler's cycle as the last gate before execution.
20 new tests.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -25,6 +25,8 @@ execution:
   max_position_pct: 10
   max_cash_per_trade_pct: 5
   initial_cash: 100000
+  kill_switch: false              # set true to halt all order submission
+  max_daily_loss_pct: 3.0         # stop trading when daily realized loss exceeds this %
 
 journal:
   path: data/journal.jsonl
