--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = ["pyyaml", "click", "jsonschema", "python-dotenv"]
 vpa = "cli.main:cli"
 
 [project.optional-dependencies]
-data = ["alpaca-py", "pandas"]
+data = ["alpaca-py", "pandas", "pytz"]
 backtest = ["pandas"]
 dev = ["pytest", "pytest-cov"]
 
