--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@
 # Quick start:
 #   1. Copy .env.example to .env and set your Alpaca keys
 #   2. docker compose build
-#   3. docker compose run vpa-spy ingest --days 60
-#   4. docker compose run vpa-qqq ingest --days 60
-#   5. docker compose up -d          # starts live paper trading for all symbols
-#   6. docker compose logs -f        # watch signals in real time
+#   3. docker compose run --rm vpa-spy ingest --days 60
+#   4. docker compose run --rm vpa-qqq ingest --days 60
+#   5. docker compose run --rm vpa-spy ingest --timeframe 1d --days 365
+#   6. docker compose run --rm vpa-qqq ingest --timeframe 1d --days 365
+#   7. docker compose up -d          # starts live paper trading for all symbols
+#   8. docker compose logs -f        # watch signals in real time
 #
 # Add more symbols:
 #   1. Create deploy/config-AAPL.yaml (copy SPY, change symbol + paths)
