--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@
 #
 # Quick start:
 #   1. Copy .env.example to .env and set your Alpaca keys
-#   2. docker compose build
+#   2. make build
 #   3. docker compose run --rm vpa-spy ingest --days 60
 #   4. docker compose run --rm vpa-qqq ingest --days 60
 #   5. docker compose run --rm vpa-spy ingest --timeframe 1d --days 365
@@ -21,7 +21,12 @@
 
 services:
   vpa-spy:
-    build: .
+    image: vpa-engine:${VPA_VERSION:-latest}
+    build:
+      context: .
+      args:
+        VERSION: ${VPA_VERSION:-dev}
+        GIT_SHA: ${VPA_GIT_SHA:-unknown}
     container_name: vpa-spy
     env_file: .env
     volumes:
@@ -38,7 +43,12 @@ services:
       retries: 3
 
   vpa-qqq:
-    build: .
+    image: vpa-engine:${VPA_VERSION:-latest}
+    build:
+      context: .
+      args:
+        VERSION: ${VPA_VERSION:-dev}
+        GIT_SHA: ${VPA_GIT_SHA:-unknown}
     container_name: vpa-qqq
     env_file: .env
     volumes:
